k8s/flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc 
  namespace: flaskapp-ns
spec:
  selector:
    app: flask-app-deploy
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
