k8s/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: flaskapp-ns
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
